[build-system]
    requires = ['setuptools>=61.0']
    build-backend = 'setuptools.build_meta'

[project]
    name = ''
    version = ''
    description = ''
    readme = 'README.md'
    requires-python = '>='
    license = {file = 'LICENSE'}
    keywords = []
    authors = [
        {name = '', email = ''},
    ]
    maintainers = [
        {name = '', email = ''},    
    ]
    classifiers = [
        'Programming Language :: Python',
        'Operating System :: OS Independent',
    ]
    dependencies = [
        '',
        ''
    ]

[project.optional-dependencies]
test = []

[project.urls]
homepage = ''
